ADD_DEFINITIONS(
    -DPYIEX_EXPORTS
    )

ADD_LIBRARY ( PyIex ${LIB_TYPE}
	PyIex.cpp

    PyIex.h
    PyIexExport.h
    PyIexTypeTranslator.h
)

TARGET_LINK_LIBRARIES ( PyIex
	${PYTHON_LIBRARIES}
)

INSTALL ( TARGETS PyIex
	DESTINATION
	lib
)

ADD_LIBRARY ( iex ${LIB_TYPE}
	iexmodule.cpp
)

SET_TARGET_PROPERTIES ( iex
	PROPERTIES PREFIX "" SUFFIX ".pyd" BUILD_WITH_INSTALL_RPATH ON
)

TARGET_LINK_LIBRARIES ( iex
	PyIex
	Iex${ILMBASE_LIBSUFFIX}
	${Boost_LIBRARIES}
)

INSTALL ( TARGETS iex PyIex
    #DESTINATION lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
    DESTINATION ${INSTALL_DIR}
    )

